# marecrisium

./: .gitattributes  .gitignore  .luarc.json  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  MODIFICATIONS.md  Makefile  README.md  conanfile.py  mise.toml
.github/workflows/: linux.yml  macos.yaml  macos.yml  publish.yaml  publish.yml  windows.yaml  windows.yml
assets/: .gitignore  generate.py  template.lua.j2
assets/mainmenu/: mainmenu.aseprite
assets/objects/: generate.py  template.lua.j2
assets/objects/player/: config.json  patch.lua.j2  player.aseprite  player.json
assets/player/: Makefile  config.json  patch.lua.j2  player.json  player.tps
assets/tilemaps/: forest.tmx  generate.py
cartridge/foregrounds/: chrome.lua  dialog.lua  mist.lua
cartridge/locales/: en.lua
cartridge/objects/: demon.lua  drone.lua  enemy.lua  fireball.lua  player.lua  robot.lua  tree.lua
cartridge/objects/namespace/: player.lua
cartridge/overlay/fonts/: pixel.lua  rpgfont.lua
cartridge/overlays/: hud.lua
cartridge/particles/: smoke.lua
cartridge/scripts/: main.lua
cartridge/scripts/helpers/: agent.lua  camera.lua  controls.lua  easing.lua  enemy.lua  math.lua  queue.lua  random.lua  scheduler.lua  spawner.lua  steering.lua  string.lua  table.lua  ticker.lua
cartridge/stages/: forest.lua  mainmenu.lua  namespace.lua
cartridge/tilemaps/: brownhill.lua  forest.bmap
definitions/: carimbo.lua  nostalgia.lua
docs/: BUILDING.md  GDD.md  gdd.md
fuzz/: CMakeLists.txt  cartridge.cpp  conanfile.py  corpus.py  harness.cpp
recipes/luajit/: conandata.yml  conanfile.py
recipes/mimalloc/: conandata.yml  conanfile.py
schemas/: CMakeLists.txt  rpc.fbs
server/: CMakeLists.txt  main.cpp
src/: achievement.cpp  achievement.hpp  application.cpp  application.hpp  atlas.cpp  atlas.hpp  binding.cpp  binding.hpp  cartridge.cpp  cartridge.hpp  cassette.cpp  cassette.hpp  color.hpp  common.cpp  common.hpp  compat.hpp  components.hpp  deleter.hpp  die.cpp  die.hpp  director.cpp  director.hpp  engine.cpp  engine.hpp  filesystem.cpp  filesystem.hpp  font.cpp  font.hpp  fontpool.cpp  fontpool.hpp  foreground.cpp  foreground.hpp  gamepad.cpp  graphics.cpp  graphics.hpp  hello.txt  helper.hpp  internet.cpp  internet.hpp  io.cpp  (+60 more)
tools/: CMakeLists.txt  compile.lua  conanfile.py  pack.cpp  pack.py  tilemap.py  tmx2lua.py  unpack.cpp  unpack.py  websocket.py  wsserver.py
types/: carimbo.lua  game.lua  marecrisium.lua
